--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/controller.png" type="image/x-icon">
+    <title>Gamer</title>
 </head>
 <body>
-    <header class="header display">
+    <header class="header display"> 
         <div class="header-logo">
             <img src="images/Frame.png" alt="">
             <p><span class="g">G</span>amer</p>
@@ -22,8 +23,8 @@
                     </li>
                     <li class="header-content-logo">
                         <p>Follow Us On</p>
-                        <a href="https://www.youtube.com/" target="_blank"><img class="youtube" src="images/youtube.png" alt=""></a>
-                        <a href="https://www.tiktok.com/"><img class="tik-tok" src="images/tik-tok.png" alt=""></a>
+                        <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img class="youtube" src="images/youtube.png" alt=""></a>
+                        <a href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer"><img class="tik-tok" src="images/tik-tok.png" alt=""></a>
                     </li>
                 </ul>
         </div>
@@ -214,12 +215,12 @@
                 <p>My Account</p>
             </div>
             <div class="footer-image">
-                <a href="https://twitter.com/?lang=en"><img src="images/Vector.png" alt=""></a>
-                <a href="https://www.facebook.com/"><img src="images/facebook.png" alt=""></a>
-                <a href="https://www.youtube.com/"><img src="images/youtube.png" alt=""></a>
-                <a href="https://bd.linkedin.com/"><img src="images/linkedin 1.png" alt=""></a>
-                <a href="https://www.instagram.com/"><img src="images/insta.png" alt=""></a>
-                <a href="https://www.apple.com/"><img src="images/apple 1.png" alt=""></a>
+                <a href="https://twitter.com/?lang=en" target="_blank" rel="noopener noreferrer"><img src="images/Vector.png" alt=""></a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="images/facebook.png" alt=""></a>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="images/youtube.png" alt=""></a>
+                <a href="https://bd.linkedin.com/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin 1.png" alt=""></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="images/insta.png" alt=""></a>
+                <a href="https://www.apple.com/" target="_blank" rel="noopener noreferrer"><img src="images/apple 1.png" alt=""></a>
             </div>
             <div class="footer-dis-1">
                 <p>Terms and Conditions</p>
